--- a/configadmin-sql-persistence/pom.xml
+++ b/configadmin-sql-persistence/pom.xml
@@ -6,7 +6,8 @@
     <version>1.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>configadmin-sql-persistence</artifactId>
-  <name>SQL Database persistence for Configuration Admin </name>
+  <name>SQL Database persistence for Configuration Admin</name>
+  <description>SQL Database persistence for Configuration Admin.</description>
   <dependencies>
   		<dependency>
 			<groupId>org.apache.felix</groupId>
