Adds more to gitignore
Change-Id: Ia4b50d2deceef6ce32fe6ff3169db6bb09e073ff

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 *.class
 
 **/.idea/*
+.idea
 *.iml
 .project
 .classpath
 ~*
 **/.settings/*
+.settings
 **/target/*
 **/bin/*
 **/build/*
@@ -14,3 +16,4 @@
 *.jar
 *.war
 *.ear
+
