--- a/configadmin-sql-persistence/pom.xml
+++ b/configadmin-sql-persistence/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.joaoassuncao.osgi-utils</groupId>
     <artifactId>osgi-utils-parent</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
   <artifactId>configadmin-sql-persistence</artifactId>
   <name>SQL Database persistence for Configuration Admin</name>
