--- a/config-extras/pom.xml
+++ b/config-extras/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.joaoassuncao.osgi-utils</groupId>
     <artifactId>osgi-utils-parent</artifactId>
-    <version>1.2.0</version>
+    <version>1.3.0-SNAPSHOT</version>
   </parent>
   <artifactId>config-extras</artifactId>
   <name>Configuration extras</name>
