--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.joaoassuncao.osgi-utils</groupId>
 	<artifactId>osgi-utils-parent</artifactId>
-	<version>1.2.0</version>
+	<version>1.2.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>OSGi Utils :: Parent</name>
 	<description>Collection of utilities useful in OSGi environments.</description>
@@ -27,7 +27,7 @@
 		<connection>scm:git:https://github.com/jassuncao/osgi-utils.git</connection>
 		<developerConnection>scm:git:https://github.com/jassuncao/osgi-utils.git</developerConnection>
 		<url>https://github.com/jassuncao/osgi-utils</url>
-		<tag>1.2.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<properties>
