--- a/pom.xml
+++ b/pom.xml
@@ -141,12 +141,13 @@
 			          <extensions>true</extensions>
 			          <configuration>
 			            <publishingServerId>central</publishingServerId>
+			            <autoPublish>true</autoPublish>
 			          </configuration>
 			        </plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-release-plugin</artifactId>
-						<version>2.5.3</version>
+						<version>3.1.1</version>
 						<configuration>
 							<autoVersionSubmodules>true</autoVersionSubmodules>
 							<useReleaseProfile>false</useReleaseProfile>
